<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        android:defaultValue="@string/currency_symbol"
        android:entries="@array/currency_symbol_entries"
        android:entryValues="@array/currency_symbol_values"
        android:key="@string/currency_key"
        android:title="@string/currency_title" />
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/rounding_entries"
        android:entryValues="@array/rounding_values"
        android:key="@string/rounding_key"
        android:title="@string/rounding_title" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/remember_tip_key"
        android:summary="@string/remember_tip_summary"
        android:title="@string/remember_tip_title" />
    <EditTextPreference
        android:defaultValue="15"
        android:dependency="@string/remember_tip_key"
        android:key="@string/default_tip_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/default_tip_title"
        android:inputType="number"/>
</PreferenceScreen>